--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>formulario</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
 	<h1 class="fo">Formulário</h1>
